inserindo o negócio lá de consentimento
