# app/models/fidelidade_consentimento.py
@@ -1,0 +1,4 @@
+import enum
+
+class FidelidadeConsentimento(enum.Enum):
+    PROGRAMA_FIDELIDADE = "PROGRAMA_FIDELIDADE"
